# meld-3

./: .gitmodules  CMakeLists.txt
data/ui/: dirdiff.ui  filediff.ui
meld/: conf.cpp  conf.h  const.cpp  const.h  diffgrid.cpp  diffgrid.h  diffmap.cpp  diffmap.h  diffutil.cpp  diffutil.h  dirdiff.cpp  dirdiff.h  filediff.cpp  filediff.h  filemerge.cpp  filemerge.h  filters.cpp  filters.h  gutterrendererchunk.cpp  gutterrendererchunk.h  linkmap.cpp  linkmap.h  matchers.cpp  matchers.h  meld.cpp  meldapp.cpp  meldapp.h  meldbuffer.cpp  meldbuffer.h  melddoc.cpp  melddoc.h  meldwindow.cpp  meldwindow.h  merge.cpp  merge.h  misc.cpp  misc.h  newdifftab.cpp  newdifftab.h  patchdialog.cpp  (+19 more)
meld/difflib.old/: difflib.cpp  difflib.h
meld/difflib/src/: difflib.h
meld/ui/: emblemcellrenderer.cpp  emblemcellrenderer.h  findbar.cpp  findbar.h  gnomeglade.cpp  gnomeglade.h  historyentry.cpp  historyentry.h  listwidget.cpp  listwidget.h  msgarea.cpp  msgarea.h  notebooklabel.cpp  notebooklabel.h  statusbar.cpp  statusbar.h  util.cpp  util.h  vcdialogs.cpp  vcdialogs.h  wraplabel.cpp  wraplabel.h
meld/util/: compat.cpp  compat.h
meld/vc/: __init__.cpp  __init__.h  _vc.cpp  _vc.h  cvs.cpp  cvs.h  git.cpp  git.h
tests/: difflibtest.cpp  filesystemtest.cpp  sigcparamtest.cpp  tasktest.cpp
